some addses. should be final now

--- a/_documentation/includes.html
+++ b/_documentation/includes.html
@@ -35,6 +35,6 @@ lives in
         <!--#exec cmd="tree / -L 3/" -->
     </pre>
     <li>this footer inclusion does not work, unsure why. probably config</li>
-    <!--#include virtual="/footer.html" -->
+    <!--#include virtual="footer.html" -->
 
 </body>
