--- a/_documentation/index.html
+++ b/_documentation/index.html
@@ -19,4 +19,6 @@ lives in
 
     <p><a href="/icons">Icons</a></p>
     <p><a href="/psql">Postgresql Server Docs</a></p>
+    <p><a href="/includes">includes-demo</a></p
+        >
 </body>
