--- a/_documentation/index.html
+++ b/_documentation/index.html
@@ -18,6 +18,7 @@ lives in
     <h1> </h1>
 
     <p><a href="/icons">Icons</a></p>
+    <p><a href="/full-emoji-list">All Emojis</a></p>
     <p><a href="/psql">Postgresql Server Docs</a></p>
     <p><a href="/includes">includes-demo</a></p
         >
